--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-Backup website of <a href="https://noads.ga">noads.ga</a>
+<!DOCTYPE html>
+<html>
+<head>
+<title>NoAds - Block Ads for Switch Games websites</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Block Ads for Nsw2u / Nxbrew / Softcobra / Any trash websites" />
+<meta name="keywords" content="Nin10news Decode, nsw2u, nxbrew, softcobra">
+<base target="_blank">
+<style>
+ html, body
+{
+color: #0d425d;
+background: #ececec;
+font-size: x-large;
+}
+a:link {
+  color: #810000;
+}
+
+/* visited link */
+a:visited {
+  color: #810000;
+}
+img {
+}
+br {
+   display: block;
+   margin: 15px 0;
+}
+  </style>
+</head>
+<center>
+<img src="https://i.ibb.co/N2X56np/nintendo-logo-vector-format-11.png" style="width: 15%;"><br>
+<p style="background: #0080002e;">(🟥🟨) To Block Ads & Bypass shorteners links on <b>Nsw2u</b> & <b>Nxbrew</b> :</p>
+<br><i><b>1.</b> Install <b>Ublock Origin</b> Extension (To Block Ads) <a href="https://addons.mozilla.org/addon/ublock-origin/"><img src="https://i.ibb.co/yq3gr90/107280546-7b9b2a00-6a26-11eb-8f9f-f95932f4bfec.png"></img></a> <a href="https://chrome.google.com/webstore/detail/ublock-origin/cjpalhdlnbpafiamejdnhcphjbkeiagm"><img src="https://i.ibb.co/s392m7t/107280622-91a8ea80-6a26-11eb-8d07-77c548b28665.png"></img></a></i>
+<br><i><b>2.</b> Install <b>FastForward</b> Extension (To Bypass shorteners links if you use firefox) <a href="https://addons.mozilla.org/firefox/addon/fastforwardteam/"><img src="https://i.ibb.co/yq3gr90/107280546-7b9b2a00-6a26-11eb-8f9f-f95932f4bfec.png"></img></a></i>
+<br><i><b>3.</b> Install <b>Violentmonkey</b> Extension <a href="https://addons.mozilla.org/firefox/addon/violentmonkey/"><img src="https://i.ibb.co/yq3gr90/107280546-7b9b2a00-6a26-11eb-8f9f-f95932f4bfec.png"></img></a> <a href="https://chrome.google.com/webstore/detail/violent-monkey/jinjaccalgkegednnccohejagnlnfdag"><img src="https://i.ibb.co/s392m7t/107280622-91a8ea80-6a26-11eb-8d07-77c548b28665.png"></img></a></i>
+<br><i><b>3.1</b> Install my script (ouo/1link/cutdl Auto Bypasser): <b><a target="_self" href="https://noads.ga/nsw.user.js">NoAds (NSW)</a></b></i>
+
+<br>
+<p style="background: #0080002e;">(🟥🟨) And for <b>Softcobra</b>. simply use my clone no-ads website it has already decoded links: <b><a href="https://softcobra.noads.ga">softcobra.noads.ga</a></b></p>
+<br><br><br>
+</center>
+</body>
+</html>
