--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ br {
 <br><i><b>1.</b> Install <b>Ublock Origin</b> Extension (To Block Ads) <a href="https://addons.mozilla.org/addon/ublock-origin/"><img src="https://i.ibb.co/yq3gr90/107280546-7b9b2a00-6a26-11eb-8f9f-f95932f4bfec.png"></img></a> <a href="https://chrome.google.com/webstore/detail/ublock-origin/cjpalhdlnbpafiamejdnhcphjbkeiagm"><img src="https://i.ibb.co/s392m7t/107280622-91a8ea80-6a26-11eb-8d07-77c548b28665.png"></img></a></i>
 <br><i><b>2.</b> Install <b>FastForward</b> Extension (To Bypass shorteners links if you use firefox) <a href="https://addons.mozilla.org/firefox/addon/fastforwardteam/"><img src="https://i.ibb.co/yq3gr90/107280546-7b9b2a00-6a26-11eb-8f9f-f95932f4bfec.png"></img></a></i>
 <br><i><b>3.</b> Install <b>Violentmonkey</b> Extension <a href="https://addons.mozilla.org/firefox/addon/violentmonkey/"><img src="https://i.ibb.co/yq3gr90/107280546-7b9b2a00-6a26-11eb-8f9f-f95932f4bfec.png"></img></a> <a href="https://chrome.google.com/webstore/detail/violent-monkey/jinjaccalgkegednnccohejagnlnfdag"><img src="https://i.ibb.co/s392m7t/107280622-91a8ea80-6a26-11eb-8d07-77c548b28665.png"></img></a></i>
-<br><i><b>3.1</b> Install my script (ouo/1link/cutdl Auto Bypasser): <b><a target="_self" href="https://noads.ga/nsw.user.js">NoAds (NSW)</a></b></i>
+<br><i><b>3.1</b> Install my script (ouo/1link/cutdl Auto Bypasser): <b><a target="_self" href="https://noads.top/nsw.user.js">NoAds (NSW)</a></b></i>
 
 <br>
-<p style="background: #0080002e;">(🟥🟨) And for <b>Softcobra</b>. simply use my clone no-ads website it has already decoded links: <b><a href="https://softcobra.noads.ga">softcobra.noads.ga</a></b></p>
+<p style="background: #0080002e;">(🟥🟨) And for <b>Softcobra</b>. simply use my clone no-ads website it has already decoded links: <b><a href="https://softcobra.noads.top">softcobra.noads.top</a></b></p>
 <br><br><br>
 </center>
 </body>
